The attempted fix to remove the gap between the webpage and bottom of the viewport when viewing the site on chrome mobile browser did not work. In the meantime, I have changed the font-color of the mobileNavBar to black

--- a/src/commonComponents/mobileNavBar/MobileNavBar.module.scss
+++ b/src/commonComponents/mobileNavBar/MobileNavBar.module.scss
@@ -5,18 +5,21 @@
 }
 
 .mobileNavBarContainer {
-    height: auto;
-    width: 100%;
-    margin: 0 0 12% 0;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 1rem;
+  height: auto;
+  width: 100%;
+  margin: 0 0 12% 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
   a {
     font-weight: bold;
     text-decoration: underline;
-    color: rgb(100, 50, 0);
+    /* Safari-specific */
+    color: rgba(0, 0, 0, 0.1);
+    /* Chrome-specific */
+    -webkit-text-fill-color: rgba(0, 0, 0, 0.7);
     font-family: Georgia, "Times New Roman", Times, serif;
     font-weight: bold;
     font-style: italic;
